--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Web Studio project</title>
   </head>
   <body>
     <!--Шапка сайта-->
@@ -36,7 +36,7 @@
         <h2>Наши преимущества</h2>
         <ul>
           <li>
-            <img src="./images/Icon1.svg" alt="Иконка антенна" />
+            <img src="./images/icon1.svg" alt="Иконка антенна" />
             <h3>Внимание к деталям</h3>
             <p>
               Идейные соображения, а также начало повседневной работы по
@@ -44,7 +44,7 @@
             </p>
           </li>
           <li>
-            <img src="./images/Icon2.svg" alt="Иконка часы" />
+            <img src="./images/icon2.svg" alt="Иконка часы" />
             <h3>Пунктуальность</h3>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
@@ -53,7 +53,7 @@
           </li>
 
           <li>
-            <img src="./images/Icon3.svg" alt="Иконка диграмма" />
+            <img src="./images/icon3.svg" alt="Иконка диграмма" />
             <h3>Планирование</h3>
             <p>
               Равным образом консультация с широким активом в значительной
@@ -62,7 +62,7 @@
           </li>
 
           <li>
-            <img src="./images/Icon4.svg" alt="Иконка астронавт" />
+            <img src="./images/icon4.svg" alt="Иконка астронавт" />
             <h3>Современные технологии</h3>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
@@ -135,7 +135,7 @@
           </li>
           <li>
             <img
-              src="./images/UI-design-photo.png"
+              src="./images/ui-design-photo.png"
               alt="Фото UI Designer"
               width="270"
             />
